# plate

./: .gitignore  README.md  install  plate  plate.conf
bash/: README.md  install
c/: CMakeLists.txt
c/scripts/: post-build.sh
c/src/: main.c
cpp/: .gitignore  CMakeLists.txt
cpp/scripts/: pre-build.sh
cpp/src/: main.cpp
python-bin/: LICENSE  pyproject.toml
python-bin/src/_PROJECTNAME_/: __main__.py
python-lib/src/_PROJECTNAME_/: mymodule.py
python-pygame/: .vimspector.json  README.md
python-pygame/src/_PROJECTNAME_/: __main__.py  debug.py  settings.py
